--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
 <body class="body page-index clearfix">
   <div class="element element-1"></div>
   <div class="element element-2"></div>
+  <div class="element element-3"></div>
+  <div class="element element-4"></div>
   <div class="container container-1 clearfix">
-    <div class="element element-3"></div>
+    <div class="element"></div>
   </div>
   <div class="container container-2 clearfix">
-    <div class="container clearfix">
-      <div onClick="window.location='https://www.instagram.com/mezkymezky/';" class="element element-4"></div>
-    </div>
-  </div>
-  <div class="container container-4 clearfix">
     <p onClick="window.location='mailto:mezkymezky@gmail.com';" class="text">MEZKYMEZKY@GMAIL.COM</p>
   </div>
-  <div class="element element-5"></div>
+  <div class="element element-6"></div>
 </body>
 </html>
