--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <div class="element element-1"></div>
   <div class="element element-2"></div>
   <div class="element element-3"></div>
-  <div class="element element-4"></div>
-  <div class="container container-1 clearfix">
+  <div class="container _container clearfix">
     <div class="element"></div>
   </div>
-  <div class="container container-2 clearfix">
-    <p onClick="window.location='mailto:mezkymezky@gmail.com';" class="text">MEZKYMEZKY@GMAIL.COM</p>
-  </div>
+  <div class="container container-2"></div>
+  <p class="text">MEZKYMEZKY.COM</p>
+  <div class="element element-5"></div>
+  <div class="container container-3"></div>
   <div class="element element-6"></div>
 </body>
 </html>
