--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <div class="element element-1"></div>
   <div class="element element-2"></div>
   <div class="element element-3"></div>
-  <div class="element element-4"></div>
-  <p class="text">INFO@MEZKY.COM</p>
-  <div class="element element-5"></div>
+  <img class="image" src="images/Mezky-logo-single-WHT-2000px(8).jpg">
   <div class="container container-1"></div>
+  <p class="text">INFO@MEZKY.COM</p>
   <div class="container container-2"></div>
-  <div class="element element-6"></div>
+  <div class="element element-4"></div>
 </body>
 </html>
