--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
   <div class="element element-1"></div>
   <div class="element element-2"></div>
   <div class="element element-3"></div>
-  <img class="image" src="images/Mezky-logo-single-WHT-2000px(8).jpg">
-  <div class="container container-1"></div>
-  <p class="text">INFO@MEZKY.COM</p>
+  <div class="container _container clearfix">
+    <p class="text">INFO@MEZKY.COM</p>
+  </div>
+  <img class="image image-1" src="images/instagram-580PX(3).jpg">
+  <img class="image image-2" src="images/Mezky-logo-single-WHT-2000px(8).jpg">
   <div class="container container-2"></div>
   <div class="element element-4"></div>
+  <div class="container container-3"></div>
 </body>
 </html>
