--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <div class="element element-1"></div>
   <div class="element element-2"></div>
   <div class="element element-3"></div>
-  <p class="text">INFO@MEZKY.COM</p>
   <img class="image image-1" src="images/Mezky-logo-single-WHT-2000px(8).jpg">
-  <img class="image image-2" src="images/instagram-580PX(3).jpg">
+  <a href="https://www.instagram.com/mezkymezky/" class="_container">
+    <img class="image image-2 js-imagelink" src="images/instagram-580PX(3).jpg">
+  </a>
+  <button onClick="window.location='mailto:info@mezky.com';" class="_button">INFO@MEZKY.COM</button>
   <div class="container container-1"></div>
-  <div class="element element-4"></div>
   <div class="container container-2"></div>
 </body>
 </html>
