--- a/index.html
+++ b/index.html
@@ -13,11 +13,30 @@
   <div class="element element-2"></div>
   <div class="element element-3"></div>
   <img class="image image-1" src="images/Mezky-logo-single-WHT-2000px(8).jpg">
-  <a href="https://www.instagram.com/mezkymezky/" class="_container">
+  <a href="https://www.instagram.com/mezkymezky/" class="_container-1">
     <img class="image image-2 js-imagelink" src="images/instagram-580PX(3).jpg">
   </a>
+  <div class="container container-1 clearfix">
+    <div class="container clearfix">
+      <div class="element element-4"></div>
+      <div class="element element-5"></div>
+      <p class="text text-1"></p>
+      <div class="text text-2">
+        <p>About:&nbsp;</p>
+        <p>&nbsp;4 years ago, 2 whisky drinking Bristol based DJs went to play in Mexico City and fell in love with mezcal. A plot was hatched to bring together the best of these two beloved beverages and the idea for Mezky was born.&nbsp;</p>
+        <p>After a few years of tinkering with various combinations of mezcals, barrel types and ageing times, a winning formula was eventually devised.
+
+Each edition of Mezky will be highly limited, as mezcal and similar agave distillates, are generally produced in very small batches in village palenques.&nbsp;</p>
+        <p>Similarly, every barrel is carefully selected for the specific flavours the wood yields to the spirit, and of course, what spirits have previously been aged in it beforehand.</p>
+        <p>--------------------------------------------------------------------------------</p>
+        <p>Mezky #1&nbsp;</p>
+        <p>&nbsp;This edition of Mezky is a compound of two selected Espadin Joven Mezcals, aged in an Islay whisky quarter cask barrel, over several months.&nbsp;</p>
+        <p>&nbsp;100% Agave distillate, Reposado style&nbsp;</p>
+        <p>&nbsp;Taste:&nbsp;Smooth mezcal hit, followed by notes of vanilla, caramel, sea air and peated smokey goodness.</p>
+</div>
+    </div>
+  </div>
   <button onClick="window.location='mailto:info@mezky.com';" class="_button">INFO@MEZKY.COM</button>
-  <div class="container container-1"></div>
-  <div class="container container-2"></div>
+  <div class="container container-3"></div>
 </body>
 </html>
